# farlow-cli

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  build.py  pyproject.toml
.github/workflows/: ci.yml
farlow/: cli.py  config.py  models.py  plugins.py  server.py
farlow/runtimes/: __init__.py  base.py  llama.py  mock.py  transformers.py
snap/: snapcraft.yaml
tests/: test_cli.py
